--- a/IKitaplik.BlazorUI/Components/Pages/Deposits/DepositUpdate.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Deposits/DepositUpdate.razor
@@ -4,6 +4,8 @@
 @inject MessageBoxService _messageBoxService
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
+@using IKitaplik.BlazorUI.Components.Components.Images
+@using IKitaplik.Entities.Enums
 @attribute [Authorize]
 
 
@@ -15,14 +17,17 @@ else
 {
     <div class="my-5">
         <div class="w-100 row d-flex justify-items-center" style="margin:0;">
-            <div class="col-12 col-md-6 col-lg-4 my-1">
+            <div class="col-12 col-md-6 col-lg-3 my-1">
                 <MudButton Class="p-2 w-100" Variant="Variant.Filled" Color="Color.Info" Disabled="@(SelectDeposit.IsDelivered)" OnClick="EkstraSureVer">Ekstra Süre Ver</MudButton>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 my-1">
+            <div class="col-12 col-md-6 col-lg-3 my-1">
                 <MudButton Class="p-2 w-100" Variant="Variant.Filled" Color="Color.Success" Disabled="@(SelectDeposit.IsDelivered)" OnClick="EmanetiAl">Teslim Al</MudButton>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 my-1">
+            <div class="col-12 col-md-6 col-lg-3 my-1">
                 <MudButton Class="p-2 w-100" Variant="Variant.Filled" Color="Color.Error" OnClick="@((e) => Nav.NavigateTo("/deposit/list"))">Vazgeç</MudButton>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3 my-1">
+                <MudButton Class="p-2 w-100" Variant="Variant.Filled" Color="Color.Warning" OnClick="ResimIslemleri">Resim İşlemleri</MudButton>
             </div>
         </div>
         <div class="row mt-3">
@@ -192,5 +197,15 @@ else
             }
             await DepositGet();
         }
+    }
+    private async Task ResimIslemleri()
+    {
+        var parameters = new DialogParameters<_ImageUploadComponent>
+        {
+            { x => x.RelationshipId, Id },
+            { x => x.Type, ImageType.Deposit }
+        };
+        var dialog = await DialogService.ShowAsync<_ImageUploadComponent>("Resim İşlemleri", parameters);
+        await dialog.Result;
     }
 }
